Keep year if months differ with day (undefined behaviour)

BUG: 452236